deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myservice-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: myservice
  template:
    metadata:
      labels:
        app: myservice
    spec:
      containers:
      - name: myservice-container
        image: 8510a8c8b79b/myservice_perso:latest
        ports:
        - containerPort: 8080
