service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myservice-service
spec:
  selector:
    app: myservice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
